# System_Info

./: README.rst  setup.cfg  setup.py
docs/: conf.py
src/systeminfo/: __init__.py  main.py  skeleton.py
tests/: test_skeleton.py
