
[metadata]
name = systeminfo
description = Add a short description here!
author = Muireann Mac Carthy
author-email = muireann.maccarthy@ucdconnect.ie
license = mit
url = http://...
long-description = file: README.rst
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = systeminfo
include_package_data = True
package_dir =
    =src
install_requires =
tests_require = pytest; pytest-cov

[options.packages.find]
where = src
exclude =
    tests

[options.extras_require]

[test]
addopts = tests

[tool:pytest]

addopts =
    --cov systeminfo --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox

[aliases]
release = sdist bdist_wheel upload

[bdist_wheel]

universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

[devpi:upload]

no-vcs = 1
formats = bdist_wheel

[flake8]

exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]

version = 3.0.1
package = systeminfo
